--- a/Views/SaExciseDuty/Index.cshtml
+++ b/Views/SaExciseDuty/Index.cshtml
@@ -234,6 +234,7 @@
             {
                 alert("Error: Enter A Location");
             }
+            $('#SaExciseDuty').setGridParam({ page: 1 }).trigger("reloadGrid");
         }
 
     function SearchByComments()
