--- a/Views/SaInternalTransfer/Index.cshtml
+++ b/Views/SaInternalTransfer/Index.cshtml
@@ -252,6 +252,7 @@
             {
                  alert("Error: Enter A From Location");
             }
+             $('#saInternalTransfer').setGridParam({ page: 1 }).trigger("reloadGrid");
         }
 
     function SearchByComments()
