--- a/Views/SaOutbound/Index.cshtml
+++ b/Views/SaOutbound/Index.cshtml
@@ -310,6 +310,7 @@
             {
                  alert("Error: Enter A From Location");
             }
+            $('#saOutbound').setGridParam({ page: 1 }).trigger("reloadGrid");
         }
 
     function SearchByComments()
