--- a/Views/SaRelease/Index.cshtml
+++ b/Views/SaRelease/Index.cshtml
@@ -253,6 +253,7 @@
             {
                 alert("Error: Enter A Location");
             }
+            $('#saRelease').setGridParam({ page: 1 }).trigger("reloadGrid");
         }
 
     function SearchByComments()
