--- a/Views/FulfillSales/Index.cshtml
+++ b/Views/FulfillSales/Index.cshtml
@@ -78,6 +78,7 @@
     $.jgrid.defaults.styleUI = 'Bootstrap';
     $.jgrid.defaults.responsive = true;
     var curRowId = -1;
+    //var lastSel;
     var name="";
     $(document).ready(function() {
        $("#FulfillSalesHdr").jqGrid({
@@ -160,7 +161,12 @@
                 
                var id=$("#FulfillSalesHdr").getCell(rowid, "customerOrderID");
                 getDetails(id);
-               // $('#'+rowid).addClass('ui-state-highlight');
+                //if(lastSel!=null)
+                //{
+                //    $('#'+lastSel).removeClass('ui-state-highlight');
+                //}
+                //lastSel =$('#'+rowid);
+                //$('#'+rowid).addClass('ui-state-highlight');
                  $("#FulfillSalesDtls").trigger('reloadGrid');
 
                }
@@ -372,14 +378,14 @@
                             delOptions: { url: 'FulfillSales/DeleteDtls' }
                         }
                     },
-                    { label: 'Customer Order Detail Id',name: 'customerOrderDetailID', editable: true,hidden:true,editoptions: { readonly: 'readonly'},key: true},
+                   { label: 'Customer Order Detail Id',name: 'customerOrderDtlsID',hidden:true,editoptions: { readonly: 'readonly'},key: true},
                    { label: 'Customer Order Id',name: 'customerOrderID', hidden:true,editable: true,editoptions: { readonly: 'readonly'}},
-                   { label: 'Product ID(Sku)',name: 'productSku', editable: true,editoptions: { readonly: 'readonly'}},
-                   { label: 'Product Desc',name: 'productDesc', editable: true,editoptions: { readonly: 'readonly'}},
-                   { label: 'Stoc kQty',name: 'stockQty', editable: true,editoptions: { readonly: 'readonly'}},
-                   { label: 'Qty Ordered',name: 'qtyOrdered', editable: true,editoptions: { readonly: 'readonly'}},
-                   { label: 'Qty Fulfilled',name: 'qtyFulfilled', editable: true,editoptions: { readonly: 'readonly'}},
-                   { label: 'Notes',name: 'notes', editable: true,editoptions: { readonly: 'readonly'}}
+                   { label: 'Product ID(Sku)',name: 'productSku',editoptions: { readonly: 'readonly'}},
+                   { label: 'Product Desc',name: 'productDesc',editoptions: { readonly: 'readonly'}},
+                   { label: 'Stoc kQty',name: 'stockQty',editoptions: { readonly: 'readonly'}},
+                   { label: 'Qty Ordered',name: 'qtyOrdered',editoptions: { readonly: 'readonly'}},
+                   { label: 'Qty Fulfilled',name: 'qtyFulfilled', editable: true,edittype:'text',editrules: {number:true}},
+                   { label: 'Notes',name: 'notes', editable: true,edittype:'text'}
 
 
                  ], 
