-fixed customer order

--- a/Views/CustomerOrder/Index.cshtml
+++ b/Views/CustomerOrder/Index.cshtml
@@ -140,7 +140,7 @@
                    { label: 'Stoc Qty',name: 'stockQty',fixed:true,width:100, editable: true,edittype:'text',editrules: {number:true}},
                    { label: 'Qty Ordered',name: 'qtyOrdered',fixed:true,width:100, editable: true,edittype:'text',editrules: {number:true}},
                    { label: 'Qty Fulfilled',name: 'qtyFulfilled',fixed:true,width:100, editable: true,edittype:'text',editrules: {number:true}},
-                   { label: 'Notes',name: 'notes', editable: true,fixed:true,width:45   0,edittype:'text'}
+                   { label: 'Notes',name: 'notes', editable: true,fixed:true,width:450,edittype:'text'}
 
                  ], 
                viewrecords: true,
