--- a/Views/InvTxSummary/Index.cshtml
+++ b/Views/InvTxSummary/Index.cshtml
@@ -158,9 +158,10 @@
               );
                
        });
-       //$(document).ready(function () {  
-       //    $('#startDate').val(date());
-       //});
+       $(document).ready(function () {  
+           $('#startDate').val(date());
+            $('#endDate').val(date());
+       });
       $(document).ready(function () {  
        $.ajax({  
            type: "GET",  
