--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                  <a class="dropdown-item" asp-area="" asp-controller="FulfillSales" asp-action="Index">Fulfill Sales</a>
                                  <a class="dropdown-item" asp-area="" asp-controller="CustomerOrder" asp-action="Index">Customer Order</a>
-                                 <a class="dropdown-item" asp-area="" asp-controller="CustomerSummary" asp-action="Index">Customer Adjustment</a>
+                                 <a class="dropdown-item" asp-area="" asp-controller="CustomerSummary" asp-action="Index">Customer Summary</a>
                             </div>
                          </li>                
                          <li class="nav-item dropdown">
