-Add fulfiil button fulfillsales

--- a/Views/FulfillSales/Index.cshtml
+++ b/Views/FulfillSales/Index.cshtml
@@ -25,8 +25,8 @@
             </div>
             </form>
        </div>
-       <div class="col-sm-2"></div>
-        <div class="col-sm-3 text-right">
+       <div class="col-sm-1"></div>
+        <div class="col-sm-2">
             <form class="form-inline">
             <div class="form-group">
             <label for="RecordLimitDropdown">Record Limits:</label>  
@@ -45,11 +45,11 @@
       <input id="PendingCheckbox" type="checkbox" value="PendingCheckbox">:Pending</label>
             
         </div>
-        <div class="col-sm-3">
+        <div class="col-sm-2">
        <label class="checkbox-inline">
       <input id="FulfilledCheckbox" type="checkbox" value="FulfilledCheckbox">:Fulfilled</label>
         </div>
-        <div class="col-sm-3 text-right">
+        <div class="col-sm-2">
             <form class="form-inline">
             <div class="form-group">
             <label for="locationsDropdown">Order Source:</label>  
@@ -57,6 +57,10 @@
             </div>
             </form>
         </div>
+        <div class="col-sm-1"></div>
+        <div class="col-sm-1 text-right">
+          <button class="btn btn-outline-secondary" style="font-size:10px;" id="fulfill" type="button">Fulfill</button>  
+        </div>  
       </div>
     </div>
    
