-validation -fixing SaStockRecieved

--- a/Views/FulfillSales/Index.cshtml
+++ b/Views/FulfillSales/Index.cshtml
@@ -235,10 +235,10 @@
                $("#RecordLimitDropdown").html(s); 
 
    });
-           $(document).ready(function () {  
-           $('#OrderDate').val(date());
-           $('#DeliveryDate').val(date());
-       });
+       //    $(document).ready(function () {  
+       //    $('#OrderDate').val(date());
+       //    $('#DeliveryDate').val(date());
+       //});
 
 
       $("#PendingCheckbox").on('click', function () { searchByPendingCheckbox("Pending"); });
